# CommandLineAdventureGame

./: .gitignore  CMakeLists.txt  baseScreen.h  character.cpp  character.h  characterCreationScreen.h  classManager.cpp  classManager.h  combatScreen.h  dice.cpp  dice.h  displayWindow.cpp  displayWindow.h  encounter.cpp  encounter.h  enemy.cpp  enemy.h  fight.cpp  fight.h  fonts.h  gameState.h  gnoll.cpp  gnoll.h  mage.cpp  mage.h  main.cpp  player.cpp  player.h  rogue.cpp  rogue.h  shaman.cpp  shaman.h  startStory.cpp  startStory.h  warrior.cpp  warrior.h
UIScreens/: baseScreen.h  characterCreationScreen.cpp  characterCreationScreen.h  combatScreen.cpp  combatScreen.h  displayWindow.cpp  displayWindow.h  gameState.h  menuScreen.cpp  menuScreen.h
fonts/: Montserrat-VariableFont_wght
imgui/: imgui.ini
